🐛 Fixed issue with heading overlaps

--- a/src/Fydar.Dev.WebApp/Components/Blocks/Headings/Heading.razor.css
+++ b/src/Fydar.Dev.WebApp/Components/Blocks/Headings/Heading.razor.css
@@ -110,7 +110,7 @@
     }
 
         .heading-wrapper.heading-wrapper-media .heading-prefix {
-            margin-left: 0;
+            margin-left: 1.925rem;
         }
 }
 
